Partial log addition

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 status = warn
-name= properties_configuration_raft-consensus
+name = properties_configuration_raft-consensus
 
 # Give directory path where log files should get stored
 property.basePath = /var/log/raft-consensus/raft-consensus
@@ -11,14 +11,13 @@ appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
 
 # Specify the pattern of the logs
-appender.console.layout.pattern =  %d{yyyy-MM-dd HH:mm:ss.SSS} %highlight{%level}{FATAL=red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue}  [%C][%M] - %msg%n
-
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %highlight{%level}{FATAL=red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue} [%C.%M:%L] - %msg%n
 
 # RollingFileAppender will print logs in file which can be rotated based on time or size
 appender.rolling.type = RollingFile
 appender.rolling.name = fileLogger
-appender.rolling.fileName= ${basePath}/raft-consensus.log
-appender.rolling.filePattern= ${basePath}/raft-consensus_%d{yyyyMMdd}.log.gz
+appender.rolling.fileName = ${basePath}/raft-consensus.log
+appender.rolling.filePattern = ${basePath}/raft-consensus_%d{yyyyMMdd}.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%c] [%M] [%l] - %msg%n
 appender.rolling.policies.type = Policies
